[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GUI/Widgets/BlurredBackground_Widget.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/GUI/Shaders/blur.shader" type="Shader" id=2]
[ext_resource path="res://Prefabs/GUI/white.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/GUI/MainMenu_Theme.tres" type="Theme" id=4]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/amount = 2.0

[node name="BlurredBackground_Widget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurBackground" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WidgetBackground" type="PanelContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.8
grow_vertical = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WidgetBackground"]
margin_left = 18.0
margin_top = 18.0
margin_right = 1518.0
margin_bottom = 522.0

[node name="Message_Label" type="Label" parent="WidgetBackground/VBoxContainer"]
margin_left = 496.0
margin_top = 83.0
margin_right = 1003.0
margin_bottom = 167.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Some message here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="HBoxContainer" parent="WidgetBackground/VBoxContainer"]
margin_top = 254.0
margin_right = 1500.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionButton" type="Button" parent="WidgetBackground/VBoxContainer/ButtonsContainer"]
margin_left = 235.0
margin_top = 83.0
margin_right = 454.0
margin_bottom = 167.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Action1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton2" type="Button" parent="WidgetBackground/VBoxContainer/ButtonsContainer"]
margin_left = 693.0
margin_top = 83.0
margin_right = 1500.0
margin_bottom = 167.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Action2 with a very long name"
__meta__ = {
"_edit_use_anchors_": false
}
